Fixed spacing issues

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -189,8 +189,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (min-width: 768px) {
   header {
-    margin: 0 auto;
-    padding-top: 50px;
+    margin: 20px 10% 0 10%;
     width: 80%;
   }
   footer {
